# portfolio-cv-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml  stack.env.example
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 0003_events.py  0004_events_updated_at.py  0005_visits.py  3112f42d1e35_initial_stations_tractors.py  e31b2289c092_video_files.py
edge/: __init__.py  config.py  main.py
ingestion/: config.py  cursor.py  exceptions.py  main.py
mosquitto/: mosquitto.conf
mqtt_consumer/: __init__.py  config.py  main.py
scripts/: benchmark_executor.py  generate_test_video.py  seed_reference.py  simulate_station.py  smoke_mqtt_ingest.py  smoke_scheduler.py  smoke_visit_aggregator.py
src/: dependencies.py  logging_setup.py  main.py  utils.py
src/config/: database.py  detector.py  logging.py  mqtt.py  scheduler.py  threads.py  video.py  visit.py
src/models/: __init__.py  base.py  event.py  station.py  tractor.py  video_file.py  visit.py
src/repositories/: base.py  event.py  station.py  tractor.py  video_file.py  visit.py
src/router/: __init__.py  factory.py
src/schemas/: detector.py  edge_ingest.py  event.py  station.py  tractor.py  video_file.py  visit.py
src/services/: detector.py  event_service.py  exceptions.py  mqtt_client.py  scheduler.py  station_service.py  tractor_service.py  video_executor.py  video_handler.py  video_processor.py  video_service.py  visit_service.py
src/sse/: __init__.py  broker.py  channels.py
tests/: conftest.py
(+18 files in other folders)
