[project]
name = "agro-tracking"
version = "0.1.0"
description = "Agro Tracking API — video + ArUco + visit state machine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.30.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy==2.0.41",
    "fastapi==0.115.12",
    "uvicorn>=0.35.0",
    "sqlmodel>=0.0.25",
    "alembic>=1.16.5",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "sse-starlette>=3.0.3",
    "numpy<2.0.0",
    "opencv-contrib-python>=4.10.0",
    "aiomqtt>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "ingestion"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
preview = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501", "B008", "C901", "W191", "E741"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.6.0",
    "pre-commit>=4.0.0",
    "psycopg2-binary>=2.9.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: fast isolated unit tests (no I/O)",
    "integration: multi-module tests, runs in CI",
]
